# chat_app

./: .gitignore  init.sh  start_servers.sh  test_server_stress.py
.github/workflows/: build-apk.yml
.iflow/: features.json  progress.md
client/chat_app/: .gitignore  pubspec.yaml
client/chat_app/android/: build.gradle  gradle.properties
client/chat_app/android/app/: build.gradle  google-services.json
client/chat_app/android/app/src/main/: AndroidManifest.xml
client/chat_app/android/app/src/main/kotlin/com/ey/echat/: BackgroundServiceManager.kt  BootReceiver.kt  ForegroundService.kt  MainActivity.kt
client/chat_app/android/app/src/main/res/drawable/: ic_launcher_foreground.xml
client/chat_app/android/app/src/main/res/values/: colors.xml  styles.xml
client/chat_app/lib/: main.dart
client/chat_app/lib/models/: favorite.dart  friend.dart  friend.g.dart  group.dart  group.g.dart  message.dart  message.g.dart  models.dart  protocol.dart  user.dart  user.g.dart
client/chat_app/lib/providers/: app_provider.dart
client/chat_app/lib/screens/: chat_screen.dart  chats_screen.dart  contacts_screen.dart  create_group_screen.dart  edit_profile_screen.dart  favorites_screen.dart  file_manager_screen.dart  friend_profile_screen.dart  gallery_screen.dart  group_management_screen.dart  groups_screen.dart  login_screen.dart  main_screen.dart  profile_screen.dart  register_screen.dart  server_config_screen.dart  settings_screen.dart  splash_screen.dart  user_search_screen.dart
client/chat_app/lib/services/: background_service.dart  chat_service.dart  fcm_service.dart  jpush_service.dart  message_database.dart  network_service.dart  notification_service.dart  storage_service.dart  websocket_service.dart
client/chat_app/lib/utils/: date_time_utils.dart
client/chat_app/linux/: CMakeLists.txt
media/2026/03/11/: 48_1773243321437.txt  48_1773243718135.txt
server/: CMakeLists.txt  CMakeLists_original.txt  CMakeLists_termux.txt  media_server.py  xmake.lua
server/build_termux/: CMakeCache.txt  Makefile  chat_server  cmake_install.cmake  compile_commands.json  media_server
server/include/: bot_manager.hpp  database.hpp  database_pool.hpp  deepseek_client.hpp  fcm_manager.hpp  friend_manager.hpp  gateway_server.hpp  group_manager.hpp  jpush_manager.hpp  js_bot.hpp  message_manager.hpp  protocol.hpp  server.hpp  session.hpp  thread_pool.hpp  user_manager.hpp  websocket_server.hpp
server/plugins/: deepseek_bot.js  echo_bot.js
server/src/: bot_manager.cpp  database.cpp  deepseek_client.cpp  fcm_manager.cpp  friend_manager.cpp  gateway_main.cpp  gateway_server.cpp  group_manager.cpp  jpush_manager.cpp  js_bot.cpp  main.cpp  message_manager.cpp  server.cpp  session.cpp  user_manager.cpp  websocket_server.cpp
